Modify for add more activity files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
             android:name=".MyService"
             android:enabled="true"
             android:exported="true"></service>
+
+       <activity android:name=".Layout_Service"/>
+       <activity android:name=".Layout_Player"/>
+
+
     </application>
 
 </manifest>
