Revert "Modify file names"
This reverts commit 5b11b27cbcf62f81d147cfaa4881b940755a288e.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:exported="true"></service>
 
         <activity android:name=".Layout_Service"/>
-        <activity android:name=".Layout_YoutubePlayer"/>
+        <activity android:name=".Layout_Player"/>
         <!-- add for tenserflow -->
         <activity android:name=".tenserflow.CameraActivity"/>
         <!--  -->
